--- a/exercises/06-Practicing-Rules/styles.css
+++ b/exercises/06-Practicing-Rules/styles.css
@@ -1,1 +1,21 @@
 /* add your styles here */
+body {
+	background-image: url("https://3000-purple-earthworm-51ku3bcv.ws-us15.gitpod.io/.learn/assets/background-vertical.jpg?raw=true");
+	font-family: "Times New Roman", Times, serif;
+	padding-left: 20px;
+}
+h1 {
+	font-family: "Courier New", Courier, monospace;
+	color: red;
+	text-align: center;
+}
+h2 {
+	text-decoration: underline;
+}
+#id1 {
+	padding: 5px;
+	background-color: rgba(255, 255, 255, 0.2);
+}
+a:hover {
+	color: green;
+}
