--- a/exercises/08-Rounded-Image/styles.css
+++ b/exercises/08-Rounded-Image/styles.css
@@ -2,5 +2,8 @@ body {
 	background: #bdbdbd;
 }
 .rounded {
-	border-radius: 100%;
+	object-fit: cover;
+	border-radius: 50%;
+	width: 300px;
+	height: 300px;
 }
