--- a/exercises/13-Anchor-Like-Button/styles.css
+++ b/exercises/13-Anchor-Like-Button/styles.css
@@ -1,7 +1,13 @@
 .orange-btn {
 	/*your code here*/
+	padding: 10px;
+	border-radius: 4px;
+	text-decoration: none;
+	background-color: orange;
+	color: white;
 }
 
 .orange-btn:hover {
 	/*YOUR CODE HERE FOR THE HOVER STATE*/
+	background-color: orangered;
 }
